v10/fixtures/ast/errors/array_destructure_short/source.able
arr := [1]
[a, b] := arr
